--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -49,6 +49,7 @@
   "all_blocks": "Todos os Blocos",
   "all_transactions": "Todas as Transações",
   "amount": "Quantidade",
+  "amount_nqt": "Montante",
   "amount_plus_fee": "Quantidade + Taxa",
   "and_logout": "e Encerrar a Sessão",
   "animate_forging_indicator": "Animar Indicador de Forjamento",
@@ -96,6 +97,8 @@
   "block": "Bloco",
   "block_details": "Detalhes de Bloco",
   "block_generation_time": "Hora de Geração do Bloco",
+  "block_height": "Altura do bloco",
+  "block_id": "ID do bloco",
   "block_signature": "Assinatura do Bloco",
   "block_timestamp": "Marca de Tempo do Bloco",
   "blocks": "Blocos",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "A Descarregar a Corrente de Blocos",
   "downloading_update": "A atualização está sendo baixada. Você será informado assim que terminar.",
   "drop_update": "Arraste a atualização do cliente (o arquivo zip) aqui ou clique para escolher.",
+  "ec_block_height": "Altura do Bloco EC",
+  "ec_block_id": "ID do bloco de EC",
   "edit": "Editar",
   "effective_balance": "Saldo Efectivo",
   "email_address": "Endereço de Correio eletrónico",
@@ -441,6 +446,7 @@
   "export_contact": "Exportar Contactos",
   "failed": "Errou",
   "fee": "Taxa",
+  "fee_nqt": "Taxa",
   "feedback": "Comentários",
   "feedback_given": "Valoração Enviada",
   "feedback_note": "Comentário",
@@ -672,6 +678,7 @@
   "payload_length": "Longitude da Carga",
   "payment": "Forma de pagamento",
   "payment_with_message": "Pagamento Com Mensagem",
+  "payments": "pagamentos",
   "peer": "Par",
   "peers": "Pares",
   "pending": "Pendente",
@@ -717,7 +724,9 @@
   "recent_transactions_since": "Transações recentes desde",
   "recipient": "Destinatário",
   "recipient_account": "Conta de Destino",
+  "recipient_address": "Endereço do destinatário",
   "recipient_alias_suggestion": "Se você quiser digitar um alias, coloque @ na frente.",
+  "recipient_id": "ID de destinatário",
   "recipient_info": "A conta do destinatário tem chave pública e um saldo de __burst__ BURST.",
   "recipient_malformed": "A conta do destinatário contém erros, favor ajustar.",
   "recipient_malformed_suggestion": "O endereço do destinatário está errado, quiçá você quis dizer __recipient__ ?",
@@ -729,6 +738,7 @@
   "recipient_public_key_already_announced": "A chave pública desta conta já foi declarada. Empregue a ID de conta no seu lugar.",
   "recipient_unknown": "A conta de destino é desconhecida, o que significa que nunca recebeu nem enviou nenhuma transação. Por favor, confirme a conta de destino antes de enviar.",
   "recipient_unknown_pka": "A conta de destino é uma conta desconhecida, o que significa que nunca recebeu nem enviou transação nenhuma. Para fazer este envio, deve fornecer também a chave pública da conta de destino.",
+  "recipients": "Destinatários",
   "record": "Registro",
   "referenced_transaction_full_hash": "Hash Completo da Transação Referenciada",
   "referenced_transaction_hash": "Hash da Transação de Referência",
@@ -750,6 +760,7 @@
   "remove_from_group": "Remover do grupo",
   "repeat": "Repetir",
   "request_burst": "Request BURST",
+  "request_processing_time": "Solicitar Tempo de Processamento",
   "returning_user_q": "Usuário Existente?",
   "reward_recipient": "Destinatário da recompensa",
   "same_out": "Same Amount",
@@ -783,6 +794,8 @@
   "send_message_button": "Enviar Mensagem",
   "send_message_to_sender": "Enviar mensagem ao remetente",
   "sender": "Remitente",
+  "sender_address": "Endereço do remetente",
+  "sender_id": "ID do remetente",
   "sender_public_key": "Chave Pública do Remetente",
   "server_error_unknown": "Ocorreu um erro desconhecido.",
   "set_account_info": "Estabelecer a Informação de Conta",
@@ -790,6 +803,7 @@
   "settings": "Configuração",
   "share_address": "Compartilhar Endereço",
   "show_console_log_button": "Mostrar Botom de Registro de Consola",
+  "signature": "Assinatura",
   "signature_hash": "Hash da Assinatura",
   "signed_transaction_bytes": "Bytes da Transação Assinada",
   "smart_contract": "Contrato Inteligente",
@@ -855,6 +869,7 @@
   "success_group_name_update": "Nome de Grupo atualizado com sucesso.",
   "success_hash_verification": "A versão descarregada foi verificada, o hash é correto. Você pode prosseguir com a instalação.",
   "success_issue_asset": "O ativo foi criado e estará disponível logo.",
+  "success_lease_balance": "Seu saldo será alugado em 1440 blocos.",
   "success_message_sent": "A sua mensagem foi enviada.",
   "success_messages_decrypt": "Mensagem(ns) decifrada(s) com sucesso.",
   "success_passphrase_confirmed": "Senha confirmada com sucesso, você iniciou a sua sessão.",
@@ -953,6 +968,7 @@
   "website_or_text": "Sitio web ou Texto",
   "welcome_to_burst": "Bem vindo a Burst!",
   "with_burst": "Com BURST",
+  "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
   "yesterdays_change": "Mudança de ontem",
