--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -49,6 +49,7 @@
   "all_blocks": "Tüm Bloklar",
   "all_transactions": "Tüm İşlemler",
   "amount": "Miktar",
+  "amount_nqt": "Miktar",
   "amount_plus_fee": "Miktar + Ücreti",
   "and_logout": "ve oturum kapatma",
   "animate_forging_indicator": "Katkı cubuğunun görselleştirilmesi",
@@ -96,6 +97,8 @@
   "block": "Engelle",
   "block_details": "Blok detayları",
   "block_generation_time": "Blok oluşum süresi",
+  "block_height": "Blok Yüksekliği",
+  "block_id": "Blok kimliği",
   "block_signature": "Blok imzası",
   "block_timestamp": "Block Timestamp",
   "blocks": "Bloklar",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "İndirilen Blockchain",
   "downloading_update": "Güncelleme indiriliyor. Tamamlandığında size bilgi verilir.",
   "drop_update": "Drop client update (zip file) here when downloaded or click to select.",
+  "ec_block_height": "EC Blok Yüksekliği",
+  "ec_block_id": "EC Blok Kimliği",
   "edit": "Düzenle",
   "effective_balance": "Effective bakiye",
   "email_address": "E-posta adresi",
@@ -441,6 +446,7 @@
   "export_contact": "Kişileri çıkart",
   "failed": "Başarısız",
   "fee": "Ücret",
+  "fee_nqt": "ücret",
   "feedback": "Geri bildirim",
   "feedback_given": "Verilen geri bildirim",
   "feedback_note": "Feedback Note",
@@ -670,8 +676,9 @@
   "payload": "Yükü",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload Length",
-  "payment": "",
+  "payment": "Ödeme",
   "payment_with_message": "Mesaj ile ödeme",
+  "payments": "Ödemeler",
   "peer": "Eş",
   "peers": "Peers",
   "pending": "Beklemede",
@@ -717,7 +724,9 @@
   "recent_transactions_since": "O zamandan beri yapılan son işlemler",
   "recipient": "Alıcı",
   "recipient_account": "Alıcı hesabı",
+  "recipient_address": "Alıcı adresi",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
+  "recipient_id": "Alıcı kimliği",
   "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
   "recipient_malformed": "The recipient account is malformed, please adjust.",
   "recipient_malformed_suggestion": "Alıcı adresi hatalı biçimlendirilmiş, __alıcı mı__ demek istedin?",
@@ -729,6 +738,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "recipients": "Alıcılar",
   "record": "Kayıt",
   "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
   "referenced_transaction_hash": "Referenced Transaction Hash",
@@ -750,6 +760,7 @@
   "remove_from_group": "Remove From Group",
   "repeat": "Tekrarla",
   "request_burst": "Request BURST",
+  "request_processing_time": "İşlem Süresi İste",
   "returning_user_q": "Returning User?",
   "reward_recipient": "Ödül Alıcısı",
   "same_out": "Same Amount",
@@ -783,6 +794,8 @@
   "send_message_button": "Mesaj Gönder",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Gönderen",
+  "sender_address": "Gönderen adresi",
+  "sender_id": "gönderici kimliği",
   "sender_public_key": "Sender Public Key",
   "server_error_unknown": "Bilinmeyen bir hata oluştu.",
   "set_account_info": "Hesap bilgileri ekle",
@@ -790,6 +803,7 @@
   "settings": "Ayarlar",
   "share_address": "Share Address",
   "show_console_log_button": "Show Console Log Button",
+  "signature": "İmza",
   "signature_hash": "İmza Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contract": "Akıllı Sözleşme",
@@ -855,6 +869,7 @@
   "success_group_name_update": "Group name updated successfully.",
   "success_hash_verification": "The downloaded version has been verified, the hash is correct. You may proceed with the installation.",
   "success_issue_asset": "Kıymet oluşturuldu ve yakında hazır olacaktır.",
+  "success_lease_balance": "Bakiyeniz 1440 blokta kiraya verilecek.",
   "success_message_sent": "Your message has been sent.",
   "success_messages_decrypt": "Message(s) decrypted successfully.",
   "success_passphrase_confirmed": "Passphrase confirmed successfully, you are now logged in.",
@@ -953,6 +968,7 @@
   "website_or_text": "Web sitesi veya metin",
   "welcome_to_burst": "burst hoş geldiniz!",
   "with_burst": "burst ile",
+  "wrong_pin": "Yanlış PIN",
   "x_confirmations": "__x__ teyitleri",
   "yes": "Evet",
   "yesterdays_change": "Dünün Değişimi",
