--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -49,6 +49,7 @@
   "all_blocks": "Tous les blocs",
   "all_transactions": "Toutes les transactions",
   "amount": "Montant",
+  "amount_nqt": "Montant",
   "amount_plus_fee": "Montant + frais",
   "and_logout": "et quitter",
   "animate_forging_indicator": "Indicateur de forgeage animé",
@@ -96,6 +97,8 @@
   "block": "Bloc",
   "block_details": "Détails du bloc",
   "block_generation_time": "Temps inter-bloc moyen",
+  "block_height": "Hauteur du bloc",
+  "block_id": "ID de bloc",
   "block_signature": "Signature du bloc",
   "block_timestamp": "Horodatage du bloc",
   "blocks": "Blocs",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Téléchargement de la blockchain en cours",
   "downloading_update": "La mise à jour est en cours de téléchargement. Vous serez informé une fois terminé.",
   "drop_update": "Glissez le client à jour (fichier zip) ici lors du téléchargement ou cliquez pour sélectionner.",
+  "ec_block_height": "Hauteur du bloc EC",
+  "ec_block_id": "ID de bloc EC",
   "edit": "Editer",
   "effective_balance": "Solde effectif",
   "email_address": "Adresse électronique",
@@ -441,6 +446,7 @@
   "export_contact": "Exporter des contacts",
   "failed": "Échoué",
   "fee": "Frais",
+  "fee_nqt": "Frais",
   "feedback": "Donner votre avis",
   "feedback_given": "Avis déjà donné",
   "feedback_note": "Billet de commentaire",
@@ -672,6 +678,7 @@
   "payload_length": "Longueur de la charge",
   "payment": "Paiement",
   "payment_with_message": "Paiement avec message",
+  "payments": "Paiements",
   "peer": "Pair",
   "peers": "Pairs",
   "pending": "En attente",
@@ -717,7 +724,9 @@
   "recent_transactions_since": "Transactions récentes depuis",
   "recipient": "Destinataire",
   "recipient_account": "Compte bénéficiaire",
+  "recipient_address": "Adresse du destinataire",
   "recipient_alias_suggestion": "Si vous souhaitez envoyer les BURST par le biais d'un alias, ajoutez un @ avant ce dernier.",
+  "recipient_id": "Identifiant du destinataire",
   "recipient_info": "Le compte bénéficiaire possède une clé publique et un solde de __burst__ BURST.",
   "recipient_malformed": "Le compte bénéficiaire est incorrect. Merci de le corriger.",
   "recipient_malformed_suggestion": "L'adresse du destinataire est incorrecte, vouliez-vous dire",
@@ -729,6 +738,7 @@
   "recipient_public_key_already_announced": "La clé publique de ce compte est déjà annoncée. Utilisez l'ID de compte à la place.",
   "recipient_unknown": "Le compte bénéficiaire est un compte inconnu, ce qui signifie qu'il n'a jamais émis ou reçu de transaction. Veuillez vérifier l’adresse du bénéficiaire avant de soumettre.",
   "recipient_unknown_pka": "Le compte bénéficiaire est un compte inconnu, ce qui signifie qu'il n'a jamais reçu de transaction entrante ou envoyé de transaction sortante. Pour soumettre cette demande vous devez également fournir la clé publique du bénéficiaire.",
+  "recipients": "Destinataires",
   "record": "Record",
   "referenced_transaction_full_hash": "Hachage complet de la transaction référencée",
   "referenced_transaction_hash": "Hachage de transaction référencée",
@@ -750,6 +760,7 @@
   "remove_from_group": "Supprimer du groupe",
   "repeat": "Répéter",
   "request_burst": "Request BURST",
+  "request_processing_time": "Temps de traitement de la demande",
   "returning_user_q": "Déjà inscrit ?",
   "reward_recipient": "Récipiendaire de la récompense",
   "same_out": "Same Amount",
@@ -783,6 +794,8 @@
   "send_message_button": "Envoyer le message",
   "send_message_to_sender": "Envoyer le Message à l'expéditeur",
   "sender": "Expéditeur",
+  "sender_address": "Adresse de l'expéditeur",
+  "sender_id": "ID de l'expéditeur",
   "sender_public_key": "Clé publique de l'expéditeur",
   "server_error_unknown": "Une erreur inconnue est survenue.",
   "set_account_info": "Paramétrer les infos liées au compte",
@@ -790,6 +803,7 @@
   "settings": "Paramètres",
   "share_address": "Partager l'adresse",
   "show_console_log_button": "Afficher le bouton de la console de log",
+  "signature": "Signature",
   "signature_hash": "Hachage de la signature",
   "signed_transaction_bytes": "Octets de la transaction signés",
   "smart_contract": "Contrat intelligent",
@@ -855,6 +869,7 @@
   "success_group_name_update": "Le nom du groupe a été modifié avec succès.",
   "success_hash_verification": "Le hachage a été vérifié, la version téléchargée est saine. Vous pouvez procéder à l'installation en toute sécurité.",
   "success_issue_asset": "L'actif a été créé et sera bientôt disponible.",
+  "success_lease_balance": "Votre solde sera loué dans 1440 blocs.",
   "success_message_sent": "Votre message a été envoyé.",
   "success_messages_decrypt": "Message(s) déchiffré(s) avec succès.",
   "success_passphrase_confirmed": "Phrase de passe confirmée avec succès, vous êtes maintenant connecté.",
@@ -953,6 +968,7 @@
   "website_or_text": "Site web ou description",
   "welcome_to_burst": "Bienvenue sur le client Burst!",
   "with_burst": "Avec BURST",
+  "wrong_pin": "Mauvais NIP",
   "x_confirmations": "__x__ confirmations",
   "yes": "Oui",
   "yesterdays_change": "Changement d'hier",
