--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -49,6 +49,7 @@
   "all_blocks": "Semua Blok",
   "all_transactions": "Semua transaksi",
   "amount": "Jumlah",
+  "amount_nqt": "Jumlah",
   "amount_plus_fee": "Jumlah + Biaya",
   "and_logout": "dan Logout",
   "animate_forging_indicator": "Menghidupkan Penyusunan Indikator",
@@ -96,6 +97,8 @@
   "block": "Blok",
   "block_details": "Blok rincian",
   "block_generation_time": "Waktu untuk Menghasilkan Blok",
+  "block_height": "Tinggi Blok",
+  "block_id": "Blokir ID",
   "block_signature": "Blok tanda tangan",
   "block_timestamp": "Blok Timestamp",
   "blocks": "Blok-blok",
@@ -224,6 +227,8 @@
   "downloading_blockchain": "Mengunduh Blockchain",
   "downloading_update": "Pembaruan sedang diunduh. Anda akan diberi tahu setelah selesai.",
   "drop_update": "Drop update klien (file zip) di sini ketika telah diunduh atau klik untuk memilih.",
+  "ec_block_height": "Tinggi Blok EC",
+  "ec_block_id": "ID Blok EC",
   "edit": "Mengedit",
   "effective_balance": "Keseimbangan yang efektif",
   "email_address": "Alamat Email",
@@ -441,6 +446,7 @@
   "export_contact": "Export Contacts",
   "failed": "Gagal",
   "fee": "Biaya",
+  "fee_nqt": "Biaya",
   "feedback": "Umpan balik",
   "feedback_given": "Umpan balik yang diberikan",
   "feedback_note": "Tanggapan",
@@ -672,6 +678,7 @@
   "payload_length": "membayar beban panjang",
   "payment": "Pembayaran",
   "payment_with_message": "Pembayaran dengan pesan",
+  "payments": "Pembayaran",
   "peer": "Sesama",
   "peers": "Sesama",
   "pending": "Tertunda",
@@ -717,7 +724,9 @@
   "recent_transactions_since": "Transaksi terakhir sejak",
   "recipient": "Penerima",
   "recipient_account": "Rekening Penerima",
+  "recipient_address": "Alamat penerima",
   "recipient_alias_suggestion": "Jika Anda ingin mengetik alias, tambahkan dengan karakter @.",
+  "recipient_id": "ID Penerima",
   "recipient_info": "Rekening penerima memiliki kunci publik dan keseimbangan __burst__ BURST.",
   "recipient_malformed": "Rekening penerima kecacatan, silahkan Sesuaikan.",
   "recipient_malformed_suggestion": "Alamat Penerima kecacatan, Apakah Anda berarti __recipient__?",
@@ -729,6 +738,7 @@
   "recipient_public_key_already_announced": "Public key rekening ini telah diumumkan. Gunakan ID rekening.",
   "recipient_unknown": "Akun penerima adalah rekening yang tidak diketahui. Ini tidak pernah memiliki transaksi masuk atau keluar. Silahkan mengecek alamat penerima sebelum mengirimkan.",
   "recipient_unknown_pka": "Rekening penerima tidak diketahui, yang berarti rekening tersebut belum pernah memiliki transaksi masuk atau keluar. Untuk mengirimkan permintaan ini anda diharuskan menyediakan juga public key penerima.",
+  "recipients": "Penerima",
   "record": "Merekam",
   "referenced_transaction_full_hash": "Direferensikan transaksi penuh Hash",
   "referenced_transaction_hash": "Hash transaksi tereferensi",
@@ -750,6 +760,7 @@
   "remove_from_group": "Menghapus dari grup",
   "repeat": "Ulangi",
   "request_burst": "Request BURST",
+  "request_processing_time": "Permintaan Waktu Pemrosesan",
   "returning_user_q": "Kembali pengguna?",
   "reward_recipient": "Penerima Hadiah",
   "same_out": "Same Amount",
@@ -783,6 +794,8 @@
   "send_message_button": "Kirim pesan",
   "send_message_to_sender": "Send Message to Sender",
   "sender": "Pengirim",
+  "sender_address": "Alamat pengirim",
+  "sender_id": "ID pengirim",
   "sender_public_key": "Public Key Pengirim",
   "server_error_unknown": "Terjadi kesalahan yang tidak dikenal.",
   "set_account_info": "Mengatur Catatan Info",
@@ -790,6 +803,7 @@
   "settings": "Pengaturan",
   "share_address": "Berbagi alamat",
   "show_console_log_button": "Tampilkan tombol Log konsol",
+  "signature": "Tanda tangan",
   "signature_hash": "Tanda tangan Hash",
   "signed_transaction_bytes": "Byte ditandatangani transaksi",
   "smart_contract": "Kontrak Cerdas",
@@ -855,6 +869,7 @@
   "success_group_name_update": "Nama kelompok berhasil.",
   "success_hash_verification": "Versi yang diunduh telah diverifikasi, hash benar. Anda dapat melanjutkan instalasi.",
   "success_issue_asset": "Aset telah dibuat dan akan segera tersedia.",
+  "success_lease_balance": "Saldo Anda akan disewakan dalam 1440 blok.",
   "success_message_sent": "Pesan Anda telah dikirim.",
   "success_messages_decrypt": "Pesan didekripsi berhasil.",
   "success_passphrase_confirmed": "Passphrase dikonfirmasi berhasil, Anda sekarang masuk.",
@@ -953,6 +968,7 @@
   "website_or_text": "Situs web atau teks",
   "welcome_to_burst": "Selamat datang di Burst!",
   "with_burst": "Dengan BURST",
+  "wrong_pin": "PIN salah",
   "x_confirmations": "konfirmasi __x__",
   "yes": "Ya",
   "yesterdays_change": "Perubahan kemarin",
